 - Qt: Fix potential crash if a gamepad causes focus to change
 - GBA Memory: Allow SRAM to be 64kB
 - Qt: Fix controller axis querying
 - GBA Memory: Fix 32-bit loads from unaddress cartridge space
 - Qt: Fix multiplayer windows opening as the wrong size
 - Qt: Fix controllers sometimes not loading the right profile
 - GBA: Fix hang when loading a savestate if sync to video is enabled
Misc:
 - Qt: Show multiplayer numbers in window title
 - Qt: Solar sensor can have shortcuts set

0.2.0: (2015-04-03)
Features:
 - Support for gamepad axes, e.g. analog sticks or triggers
 - Add scale presets for up to 6x
 - Settings window
 - Bilinear resampling option
 - Add option to skip BIOS start screen
 - List of recently opened games
 - Support for games using the Solar Sensor
 - Better audio resampling via blip-buf
 - Game Pak overrides dialog for setting savetype and sensor values
 - Support for games using the tilt sensor
 - Remappable shortcuts for keyboard and gamepad
 - Rewinding of emulation
 - Implemented BIOS routines SoftReset, RegisterRamReset, Diff8bitUnFilterWram, Diff8bitUnFilterVram, and Diff16bitUnFilter
 - Support IPv6
 - Save directory of last loaded file
 - Support BPS patches
 - Automatically detect and optimize out idle loops
 - Configurable game overrides
 - Support loading 7-Zip files
 - Drag and drop game loading
 - Cheat code support
 - Runtime configurable audio driver
 - Libretro core for use with RetroArch and other front-ends
 - Controller profiles for setting different bindings for different controllers
 - Ability to lock aspect ratio
 - Local link cable support
 - Ability to switch which game controller is in use per instance
 - Ability to prevent opposing directional input
 - Warning dialog if an unimplemented BIOS feature is called
 - Debugger: Add CLI "frame", frame advance command
 - Debugger: Add CLI functions for writing to memory
 - Debugger: Add CLI functions for examining memory regions